# ruspiro-register

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  build.sh  makefile
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  register.rs  tests.rs
src/system/: hcr_el2.rs  mair_el2.rs  mod.rs  sctlr_el2.rs  tcr_el2.rs  ttbr0_el2.rs
src/system/aarch32/: actlr.rs  dacr.rs  mod.rs  sctlr.rs  ttbcr.rs  ttbr0.rs  ttbr1.rs
src/system/aarch64/: actlr_el2.rs  actlr_el3.rs  ccsidr_el1.rs  clidr_el1.rs  cpacr_el1.rs  currentel.rs  esr_el1.rs  esr_el2.rs  esr_el3.rs  hcr_el2.rs  mair_el1.rs  mair_el2.rs  mod.rs  mpidr_el1.rs  sctlr_el1.rs  sctlr_el2.rs  tcr_el1.rs  tcr_el2.rs  ttbr0_el1.rs  ttbr0_el2.rs  ttbr1_el1.rs  vbar_el1.rs  vbar_el2.rs
