[package]
name = "ruspiro-register"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.5.5" # remember to update html_root_url in lib.rs
description = """
The crate provides the definitions to conviniently work with register field values that are typically presented by a set of bit fields.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-register/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-register/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro", "register", "registerfields"]
edition = "2021"
exclude = ["Makefile.toml", ".cargo/config.toml", ".github"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = []
